Another navbar fix for overflow

--- a/app.css
+++ b/app.css
@@ -22,7 +22,9 @@
 }
 
 .body{
+
     padding-top: var(--navbar-height);
+
     background-image: linear-gradient(var(--background-color1), var(--background-color2));
 }
 
@@ -134,7 +136,9 @@ ul{
     padding-left: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-right: 10px;
+    padding-right: 0px;
+
+    margin-right: 0px;
 
     display: flex;
     justify-content: space-between;
@@ -143,6 +147,15 @@ ul{
 
     border-bottom: var(--special-height) solid;
     border-color: var(--special-color);
+}
+
+.navbar{
+    width: 15%;
+    margin-left: 20px;
+    margin-right: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .logo{
@@ -155,8 +168,6 @@ ul{
 .unit{
     text-decoration: none;
     color: var(--primary-color);
-    margin-left: 5px;
-    margin-right: 5px;
 }
 
 /* Styles for desktop screens (min-width 992px) */ 
